--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,8 @@
 @import-normalize; /* bring in normalize.css styles */
-
+*{
+  margin: 0;
+  padding: 0;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -12,4 +15,215 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+ul{
+  list-style: none;
+}
+
+/* user cart */
+.container{
+  width: 100%;
+  height: 500px;
+  margin: 20px 20px;
+  padding: 4px;
+}
+.profile{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 320px;
+  height: 420px;
+  flex-direction: column;
+  margin: 20px auto;
+  border: 1px solid rgba(168, 167, 167, 0.6);
+  border-radius: 10px;
+  box-shadow: 0 5px 5px #b7b7b7;
+  background-color: #f0f0f05c;
+  
+}
+.description{
+  padding-bottom: 30px;
+  text-align: center;
+}
+.description > img{
+  padding-top: 20px;
+  width: 140px;
+  height: 140px;
+  border-radius: 50%;
+  box-shadow: 0 5px 5px #b7b7b7;
+  margin-bottom: 10px;
+  
+}
+.description > p.name{
+  font-weight: 600;
+  font-size: 23px;
+}
+.description > p.tag,
+.description > p.location{
+  margin: 10px 0;
+  color: #908f8f;
+  
+}
+.description > p.tag::before{
+  content: "@";
+}
+.stats{
+  display: flex;
+  justify-content: space-around;
+  align-items:center ;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  border: 1px solid #807e7e1a;
+  background-color: #30305f18;
+}
+.stats>li:not(:last-child){
+  border-right: 1px solid #807e7e1a;
+}
+.stats>li {
+  width: calc(100% / 3);
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.stats>li .label{
+  color:  #908f8f97;
+}
+.stats>li .quantity{
+  padding-top: 7px;
+  font-weight: bold;
+ 
+}
+
+/* Upload stats */
+
+.statistics{
+  margin: 0 auto;
+  width: 400px;
+  background-color: #848ed78e;
+  border-radius: 4px;
+  
+}
+.statistics> .title{
+  display: flex;
+  justify-content: center;
+  align-self: center;
+  padding: 30px 0;
+  text-transform: uppercase;
+  color: #a69292;
+}
+.stat-list{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 100%;
+  height: 60px;
+  padding: 0;
+}
+.stat-list > .item{
+  height: 100%;
+  width: calc(100% / 5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  font-size: 13px;
+  color: #fff;
+  border-radius: 4px;
+  
+}
+/* .stat-list > .item:not(:last-child){
+  border-right: 1px solid #fff;
+
+} */
+.stat-list > .item .percentage{
+  padding-top: 6px;
+  font-size: 18px;
+}
+.stat-list > .item:first-child{
+  background-color: rgb(221, 228, 157);
+}
+.stat-list > .item:nth-child(2){
+  background-color: rgb(102, 250, 252);
+}
+.stat-list > .item:nth-child(3){
+  background-color: rgb(83, 232, 86);
+}
+.stat-list > .item:nth-child(4){
+  background-color: rgb(98, 145, 172);
+}
+.stat-list > .item:last-child{
+  background-color: rgb(93, 124, 124);
+}
+  
+/* friends List */
+.friend-list{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.friend-list > .item{
+  display: flex;
+  align-items: center;
+  width: 200px;
+  height: 70px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-shadow: 0 2px 2px #ccc,
+  0 5px 5px #ccc;
+  font-size: 24px;
+  font-weight: 600;
+  
+}
+.friend-list > .item:not(:last-child){
+  margin-bottom: 10px;
+}
+.friend-list > .item span{
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  margin: 0 10px;
+  
+}
+.friend-list > .item .avatar{
+  border-radius: 50%;
+  margin-right: 10px;
+  box-shadow: 0 5px 3px  #ccc;
+}
+.friend-list > .item .status-online{
+  background-color: green;
+}
+.friend-list > .item .status-offline{
+  background-color: red;
+}
+
+
+/* transactions */
+
+.transaction-history{
+	width: 1200px;
+	margin-bottom: 20px;
+	border: 15px solid #afb5b5;
+	border-top: 5px solid #afb5b5;
+	border-collapse: collapse; 
+  background-color: #1409592c;
+}
+
+.transaction-history  th {
+	font-weight: bold;
+	padding: 5px;
+	background: #04baba;
+	border: none;
+	border-bottom: 5px solid #afb5b5;
+  border-left: 5px solid #afb5b5;
+}
+.transaction-history td {
+	padding: 5px;
+	border: none;
+	border-bottom: 5px solid #afb5b5;
+  border-left: 5px solid #afb5b5;
 }
